update_validation_error_handling_and_swagger_docs
